--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@opentelemetry/exporter-trace-otlp-grpc": "^0.203.0",
     "@opentelemetry/exporter-trace-otlp-http": "^0.203.0",
     "@opentelemetry/instrumentation": "^0.203.0",
+    "@opentelemetry/resources": "^2.0.1",
     "@opentelemetry/sdk-logs": "^0.203.0",
     "@opentelemetry/sdk-trace-node": "^2.0.1",
     "@vercel/otel": "^1.12.0",
